--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Learning how to learn</title>
-    <link rel="stylesheet" href="/css/normalize.css">
+    <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body class="body">
@@ -26,7 +26,6 @@
             <section class="description">
               <div class="two-columns">
                 <h2 class="two-columns__brief">The main problem with education</h2>
-
                 <div class="two-columns__main-text">
                 <p class="two-columns__paragraph">
                   Whether it's at school or university, the one thing no one ever teaches you is how to teach yourself.
@@ -46,42 +45,42 @@
             </section>
 
             <section class="digits">
-              <h2 class="digits-title">Facts and figures</h2>
-              <p class="digits-subtitle">On learning and the brain</p>
+              <h2 class="section-title">Facts and figures</h2>
+              <p class="section-subtitle">On learning and the brain</p>
               <ul class="table">
-                <li class="table__cell_theme_light">
-                  <h3 class="table__heading_theme_light">86 billion</h3>
-                  <p class="table__text_theme_light">The number of neurons in the human brain</p>
+                <li class="table__cell">
+                  <h3 class="table__heading">86 billion</h3>
+                  <p class="table__text">The number of neurons in the human brain</p>
                 </li>
-                <li class="table__cell_theme_light">
-                  <h3 class="table__heading_theme_light">2.1 billion</h3>
-                  <p class="table__text_theme_light">The number of adults with low reading proficiency</p>
-                  <p class="table__text_theme_light">World Bank, 2017</p>
+                <li class="table__cell">
+                  <h3 class="table__heading">2.1 billion</h3>
+                  <p class="table__text">The number of adults with low reading proficiency</p>
+                  <p class="table__text">World Bank, 2017</p>
                 </li>
-                <li class="table__cell_theme_light">
-                  <h3 class="table__heading_theme_light">1,000 terabytes</h3>
-                  <p class="table__text_theme_light">Human information storage capacity</p>
+                <li class="table__cell">
+                  <h3 class="table__heading">1,000 terabytes</h3>
+                  <p class="table__text">Human information storage capacity</p>
                 </li>
-                <li class="table__cell_theme_light">
-                  <h3 class="table__heading_theme_light">500 trillion</h3>
-                  <p class="table__text_theme_light">The number of nerve synapses responsible for learning in an adult human</p>
+                <li class="table__cell">
+                  <h3 class="table__heading">500 trillion</h3>
+                  <p class="table__text">The number of nerve synapses responsible for learning in an adult human</p>
                 </li>
-                <li class="table__cell_theme_light">
-                  <h3 class="table__heading_theme_light">420 million</h3>
-                  <p class="table__text_theme_light">The number of adults under 25 with insufficient education for finding employment</p>
-                  <p class="table__text_theme_light">World Bank, 2017</p>
+                <li class="table__cell">
+                  <h3 class="table__heading">420 million</h3>
+                  <p class="table__text">The number of adults under 25 with insufficient education for finding employment</p>
+                  <p class="table__text">World Bank, 2017</p>
                 </li>
-                <li class="table__cell_theme_light">
-                  <h3 class="table__heading_theme_light">17 - 20 years old</h3>
-                  <p class="table__text_theme_light">Peak learning age</p>
+                <li class="table__cell">
+                  <h3 class="table__heading">17 - 20 years old</h3>
+                  <p class="table__text">Peak learning age</p>
                 </li>
-                <li class="table__cell_theme_light">
-                  <h3 class="table__heading_theme_light">1885</h3>
-                  <p class="table__text_theme_light">Development of forgetting curve</p>
+                <li class="table__cell">
+                  <h3 class="table__heading">1885</h3>
+                  <p class="table__text">Development of forgetting curve</p>
                 </li>
-                <li class="table__cell_theme_light">
-                  <h3 class="table__heading_theme_light">1897</h3>
-                  <p class="table__text_theme_light">Publication of Ivan Pavlov's research on classical conditioning</p>
+                <li class="table__cell">
+                  <h3 class="table__heading">1897</h3>
+                  <p class="table__text">Publication of Ivan Pavlov's research on classical conditioning</p>
                 </li>
               </ul>
             </section>
@@ -90,53 +89,53 @@
               <img src="images/feynman.png" alt="feynman" class="feynman__image">
               <h2 class="feynman__title">The Feynman Technique</h2>
               <p class="feynman__subtitle">Learn without forgetting</p>
-              <a href="#" class="feynman__more">More →</a>
+              <a href="#" class="feynman__link">More →</a>
             </section>
 
             <section class="kaufman">
-              <img src="images/triangle.svg" alt="..." class="kaufman__triangle">
-              <h2 class="kaufman-title title_dark"><b>Ten principles of rapid skill acquisition</b></h2>
-              <p class="kaufman-subtitle title_dark">by Josh Kaufman</p>
+              <div class="kaufman__triangle"></div>
+              <h2 class="section-title title_dark">Ten principles of rapid skill acquisition</h2>
+              <h3 class=" section-subtitle title_dark">by Josh Kaufman</h3>
               <ul class="table table_theme_dark">
-                <li class="table__cell_theme_dark">
-                  <h3 class="table__heading_theme_dark">1</h3>
-                  <p class="table__text_theme_dark">Choose a lovable project.</p>
+                <li class="table__cell table__cell_theme_dark">
+                  <h3 class="table__heading table__heading_theme_dark">1</h3>
+                  <p class="table__text table__text_theme_dark">Choose a lovable project.</p>
                 </li>
-                <li class="table__cell_theme_dark">
-                  <h3 class="table__heading_theme_dark">2</h3>
-                  <p class="table__text_theme_dark">Focus your energy on one skill at a time.</p>
+                <li class="table__cell table__cell_theme_dark">
+                  <h3 class="table__heading table__heading_theme_dark">2</h3>
+                  <p class="table__text table__text_theme_dark">Focus your energy on one skill at a time.</p>
                 </li>
-                <li class="table__cell_theme_dark">
-                  <h3 class="table__heading_theme_dark">3</h3>
-                  <p class="table__text_theme_dark">Define your target performance level.</p>
+                <li class="table__cell table__cell_theme_dark">
+                  <h3 class="table__heading table__heading_theme_dark">3</h3>
+                  <p class="table__text table__text_theme_dark">Define your target performance level.</p>
                 </li>
-                <li class="table__cell_theme_dark">
-                  <h3 class="table__heading_theme_dark">4</h3>
-                  <p class="table__text_theme_dark">Deconstruct the skill into sub-skills.</p>
+                <li class="table__cell table__cell_theme_dark">
+                  <h3 class="table__heading table__heading_theme_dark">4</h3>
+                  <p class="table__text table__text_theme_dark">Deconstruct the skill into sub-skills.</p>
                 </li>
-                <li class="table__cell_theme_dark">
-                  <h3 class="table__heading_theme_dark">5</h3>
-                  <p class="table__text_theme_dark">Obtain critical tools.</p>
+                <li class="table__cell table__cell_theme_dark">
+                  <h3 class="table__heading table__heading_theme_dark">5</h3>
+                  <p class="table__text table__text_theme_dark">Obtain critical tools.</p>
                 </li>
-                <li class="table__cell_theme_dark">
-                  <h3 class="table__heading_theme_dark">6</h3>
-                  <p class="table__text_theme_dark">Eliminate barriers to practice.</p>
+                <li class="table__cell table__cell_theme_dark">
+                  <h3 class="table__heading table__heading_theme_dark">6</h3>
+                  <p class="table__text table__text_theme_dark">Eliminate barriers to practice.</p>
                 </li>
-                <li class="table__cell_theme_dark">
-                  <h3 class="table__heading_theme_dark">7</h3>
-                  <p class="table__text_theme_dark">Make dedicated time for practice.</p>
+                <li class="table__cell table__cell_theme_dark">
+                  <h3 class="table__heading table__heading_theme_dark">7</h3>
+                  <p class="table__text table__text_theme_dark">Make dedicated time for practice.</p>
                 </li>
-                <li class="table__cell_theme_dark">
-                  <h3 class="table__heading_theme_dark">8</h3>
-                  <p class="table__text_theme_dark">Create fast feedback loops.</p>
+                <li class="table__cell table__cell_theme_dark">
+                  <h3 class="table__heading table__heading_theme_dark">8</h3>
+                  <p class="table__text table__text_theme_dark">Create fast feedback loops.</p>
                 </li>
-                <li class="table__cell_theme_dark">
-                  <h3 class="table__heading_theme_dark">9</h3>
-                  <p class="table__text_theme_dark">Practice by the clock in short bursts.</p>
+                <li class="table__cell table__cell_theme_dark">
+                  <h3 class="table__heading table__heading_theme_dark">9</h3>
+                  <p class="table__text table__text_theme_dark">Practice by the clock in short bursts.</p>
                 </li>
-                <li class="table__cell_theme_dark">
-                  <h3 class="table__heading_theme_dark">10</h3>
-                  <p class="table__text_theme_dark">Emphasize quantity and speed.</p>
+                <li class="table__cell table__cell_theme_dark">
+                  <h3 class="table__heading table__heading_theme_dark">10</h3>
+                  <p class="table__text table__text_theme_dark">Emphasize quantity and speed.</p>
                 </li>
               </ul>
             </section>
@@ -144,45 +143,41 @@
 
         <footer class="footer">
           <div class="footer__columns">
-            <ul class="footer__column footer__column_content_copyright">
-              <li>
-                <img src="images/logo_white.png" alt="logo" class="logo logo_place_footer">
-              </li>
-              <li>
-                <p class="footer__author">&#169; 2019. Marcos Hernandez</p>
-              </li>
-            </ul>
-            <ul class="footer__column footer__column_content_info">
-              <li>
-                <p class="footer__header">About Practicum by Yandex</p>
-              </li>
-              <li>
-                <p class="column-text">Homepage</p>
-              </li>
-              <li>
-                <p class="column-text">Concept</p>
-              </li>
-              <li>
-                <p class="column-text">Mentors</p>
-              </li>
-            </ul>
-            <ul class="footer__column footer__column_content_social">
-              <li>
-                <p class="footer__header">Social Media</p>
-              </li>
-              <li>
-                <a href="https://www.facebook.com/YandexCom/" class="column-text_link">
-                  <img src="images/Facebook_white.svg" alt="Facebook" class="social-logo">
-                  Facebook
-                </a>
-              </li>
-              <li>
-                <a href="https://www.instagram.com/yandex/?hl=en" class="column-text_link">
-                  <img src="images/Instagram_white.svg" alt="Instagram" class="social-logo">
-                  Instagram
-                </a>
-              </li>
-            </ul>
+            <div class="footer__column footer__column_content_copyright">
+              <img src="images/logo_white.png" alt="logo" class="logo logo_place_footer">
+              <p class="footer__author">&#169; 2019. Marcos Hernandez</p>
+            </div>
+            <div class="footer__column">
+              <p class="footer__header">About Practicum by Yandex</p>
+              <ul class="footer__column_content_info">
+                <li>
+                  <a href="#" class="column-links">Homepage</a>
+                </li>
+                <li>
+                  <a href="#" class="column-links">Concept</a>
+                </li>
+                <li>
+                  <a href="#" class="column-links">Mentors</a>
+                </li>
+              </ul>
+            </div>
+            <div class="footer__column">
+              <p class="footer__header">Social Media</p>
+              <ul class="footer__column_content_social">
+                <li>
+                  <a href="https://www.facebook.com/YandexCom/" class="footer__social-link">
+                    <img src="images/Facebook_white.svg" alt="Facebook" class="social-icon">
+                    Facebook
+                  </a>
+                </li>
+                <li>
+                  <a href="https://www.instagram.com/yandex/?hl=en" class="footer__social-link">
+                    <img src="images/Instagram_white.svg" alt="Instagram" class="social-icon">
+                    Instagram
+                  </a>
+                </li>
+              </ul>
+            </div>
           </div>
         </footer>
 
